internal/fixtures/kube/k8s-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
spec:
  containers:
    - name: cpu-demo
      image: images.my-company.example/app:v4
      resources:
        requests:
          memory: '64Mifg'
          cpu: '250m'
        limits:
          memory: '128Mi'
          cpu: '1G'
